--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button data-tool="axe" class="btn">
         <img src="./assets/img/axe.png" alt="axe" />axe
       </button>
-      <div class="inventory"></div>
+      <div id="inventory" class="inventory"></div>
       <button class="btn--reset">reset</button>
     </div>
   </body>
