added a tutorial in the landing page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
           src="./assets/img/Minecraft_logo.png"
           alt="Minecraft Logo"
         />
+        <div class="landingPage__tutorial">
+          <p>You have 3 types of tools:</p>
+          <ul>
+            <li>
+              <img src="./assets/img/pickaxe.png" alt="pickaxe">
+              <p class="landingPage__tutorial--tools"> Pickaxe - for mining rocks.</p>
+            </li>
+            <li>
+              <img src="./assets/img/Shovel.png" alt="Shovel">
+              <p class="landingPage__tutorial--tools"> Shovel - for digging dirt.</p>
+            </li>
+            <li>
+              <img src="./assets/img/axe.png" alt="axe">
+              <p class="landingPage__tutorial--tools"> Axe - for cutting trees.</p>
+            </li>
+          </ul>
+          <p>Clicking on a tool followed by clicking on a tile in the world will remove the tile, (If it is of the correct type) and add it to the inventory.</p>
+          <p>You can also click on the tile in the inventory and place it back in the world.</p>
+          <p class="landingPage__tutorial--enjoy">Enjoy!</p>
+        </div>
         <button class="landingPage--startBtn">Start</button>
       </div>
 
