--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </li>
         </ul>
       <div id="inventory" class="btn">see inventory</div>
-      <div class="btn closeInventory display-none">&Cross;</div>
+      <div class="closeInventory display-none">&Cross;</div>
       <button class="btn--reset">reset</button>
     </div>
   </body>
