--- a/index.html
+++ b/index.html
@@ -75,18 +75,7 @@
           <button data-world="darkMode" class="btn btn-hover">dark mode</button>
         </div>
         <!----------------------- tools ----------------------->
-        <div dtat-id="btnInfo__tools" class="display-flex">
-          <button data-tool="pickaxe" class="btn btn-hover">
-            <img src="./assets/img/pickaxe.png" alt="pickaxe" />
-            pickaxe
-          </button>
-          <button data-tool="shovel" class="btn btn-hover">
-            <img src="./assets/img/shovel.png" alt="shovel" />shovel
-          </button>
-          <button data-tool="axe" class="btn btn-hover">
-            <img src="./assets/img/axe.png" alt="axe" />axe
-          </button>
-        </div>
+        <div dtat-id="btnInfo__tools" class="display-flex"></div>
         <!----------------------- inventory ----------------------->
         <ul class="inventoryContainer display-none">
           <li>
